--- a/data/drops.ini
+++ b/data/drops.ini
@@ -754,3 +754,11 @@
 ##  NPC: Castle Hedgehog (#288)
 288 =
 
+## 	NPC: Elite Dragon (#351)
+## 	0: { Dragon Skull (#609) x1, 1% }
+## 	1: { Gold (#1) x200-1000, 50% }
+## 	2: { Dragon Eye (#600) x1, 3% }
+## 	3: { Dragon Wing (#470) x1, 3% }
+## 	4: { Dragon Claw (#469) x1, 3% }
+351 = 609,1,1,1, 1,200,1000,50, 600,1,1,3, 470,1,1,3, 469,1,1,3
+
