--- a/config/misc.ini
+++ b/config/misc.ini
@@ -157,6 +157,22 @@ StartEquipMale = 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 # Syntax: item,item,item,... (x15)
 StartEquipFemale = 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0
 
+## WeddingRing (number)
+# ID of wedding ring item (if zero no ring is given)
+WeddingRing = 374
+
+## WeddingMinLevel (number)
+# Minimum level required to get married
+WeddingMinLevel = 5
+
+## WeddingOutfitMale (number)
+# ID of armour required to be worn to get married (if zero, no requirement)
+WeddingOutfitMale = 133
+
+## WeddingOutfitFemale (number)
+# ID of armour required to be worn to get married (if zero, no requirement)
+WeddingOutfitFemale = 163
+
 ## DefaultBanLength (string)
 # Default length of a ban (if no length is provided)
 DefaultBanLength = 2h
@@ -236,6 +252,18 @@ CitizenSubscribeAnytime = no
 ## CitizenUnsubscribeAnywhere (bool)
 # Allows you to unsubscribe from citizenship at any innkeeper NPC
 CitizenUnsubscribeAnywhere = no
+
+## InnSleepCostBase (number)
+# Base cost for sleeping at an Inn
+InnSleepCostBase = 0
+
+## InnSleepCostPerHP (number)
+# Multiplier per missing HP when sleeping at an Inn
+InnSleepCostPerHP = 1
+
+## InnSleepCostPerTP (number)
+# Multiplier per missing TP when sleeping at an Inn
+InnSleepCostPerTP = 1
 
 ## ClockMaxDelta (number)
 # Maximum number of milliseconds to execute at once if the server stalls
