Fix Octopus (#118) Drops

--- a/data/drops.ini
+++ b/data/drops.ini
@@ -335,11 +335,14 @@
 ##  1: { Orc Skull (#12) 1-1, 1% }
 117 = 396,1,1,10, 12,1,1,1
 
-##  NPC: Octopus (#118)
-##  0: { Gold (#1) 2500-4000, 10% }
-##  1: { Exp Scroll (#494) 1-1, 1% }
-##  2: { Title Certificate (#495) 1-1, 1% }
-118 = 1,2500,4000,10, 494,1,1,1, 495,1,1,1
+## 	NPC: Octopus (#118)
+## 	0: { Elegant (#373) x1, 2% }
+## 	1: { Eleganta (#368) x1, 2% }
+## 	2: { Red Enchanted Boots (#124) x1, 2% }
+## 	3: { Green Enchanted Boots (#125) x1, 2% }
+## 	4: { Blue Enchanted Boots (#126) x1, 2% }
+## 	5: { Gold (#1) x600-1200, 88% }
+118 = 373,1,1,2, 368,1,1,2, 124,1,1,2, 125,1,1,2, 126,1,1,2, 1,600,1200,88
 
 ##  NPC: Tentacle (#119)
 ##  0: { Gold (#1) 200-500, 1% }
