Pub Files Clean Up

--- a/data/drops.ini
+++ b/data/drops.ini
@@ -145,9 +145,9 @@
 47 = 1,20,50,5, 277,1,1,5
 
 ##  NPC: Undeath (#48)
-##  0: { Dark rag (#278) 1-1, 5% }
+##  0: { Dark rag (#278) 1-1, 10% }
 ##  1: { Gold (#1) 20-50, 5% }
-48 = 278,1,1,5, 1,20,50,5
+48 = 278,1,1,10, 1,20,50,5
 
 ##  NPC: Chaos Spawn (#51)
 ##  0: { Dark Blade (#287) 1-1, 5% }
@@ -323,8 +323,8 @@
 104 = 353,1,1,10
 
 ##  NPC: Azuorph (#105)
-## 	0: { Gold (#1) x20-34, 10% }
-## 	1: { Gold (#1) x10-25, 15% }
+## 	0: { Gold (#1) 20-34, 10% }
+## 	1: { Gold (#1) 10-25, 15% }
 105 = 1,20,34,10, 1,10,25,15
 
 ##  NPC: Wraith (#113)
@@ -336,12 +336,12 @@
 117 = 396,1,1,10, 12,1,1,1
 
 ## 	NPC: Octopus (#118)
-## 	0: { Elegant (#373) x1, 2% }
-## 	1: { Eleganta (#368) x1, 2% }
-## 	2: { Red Enchanted Boots (#124) x1, 2% }
-## 	3: { Green Enchanted Boots (#125) x1, 2% }
-## 	4: { Blue Enchanted Boots (#126) x1, 2% }
-## 	5: { Gold (#1) x600-1200, 88% }
+## 	0: { Elegant (#373) 1-1, 2% }
+## 	1: { Eleganta (#368) 1-1, 2% }
+## 	2: { Red Enchanted Boots (#124) 1-1, 2% }
+## 	3: { Green Enchanted Boots (#125) 1-1, 2% }
+## 	4: { Blue Enchanted Boots (#126) 1-1, 2% }
+## 	5: { Gold (#1) 600-1200, 88% }
 118 = 373,1,1,2, 368,1,1,2, 124,1,1,2, 125,1,1,2, 126,1,1,2, 1,600,1200,88
 
 ##  NPC: Tentacle (#119)
@@ -476,8 +476,8 @@
 151 = 1,10,20,20, 268,1,1,2, 222,1,1,1, 223,1,1,1
 
 ## 	NPC: Sheep (#170)
-## 	0: { Captain Boots (#484) x1, 1% }
-## 	1: { Gold (#1) x1-3, 10% }
+## 	0: { Captain Boots (#484) 1-1, 1% }
+## 	1: { Gold (#1) 1-3, 10% }
 170 = 484,1,1,1, 1,1,3,10
 
 ##  NPC: Biter (#171)
@@ -487,16 +487,16 @@
 171 = 1,50,100,1, 2,1,1,0.5, 3,1,1,0.5
 
 ## 	NPC: Blocto (#172)
-## 	0: { Gold (#1) x1-30, 10% }
+## 	0: { Gold (#1) 1-30, 10% }
 172 = 1,1,30,10
 
 ##  NPC: Puppet (#173)
 173 =
 
 ## 	NPC: King Wurm (#174)
-## 	0: { Flad Hat (#443) x1, 2% }
-## 	1: { Plaot Robes (#407) x1, 5% }
-## 	2: { Gold (#1) x200-1000, 38% }
+## 	0: { Flad Hat (#443) 1-1, 2% }
+## 	1: { Plaot Robes (#407) 1-1, 5% }
+## 	2: { Gold (#1) 200-1000, 38% }
 174 = 443,1,1,2, 407,1,1,5, 1,200,1000,38
 
 ##  NPC: Tomb Mummy (#181)
@@ -540,30 +540,6 @@
 ##  1: { Oblon Armor (#364) 1-1, 5% }
 ##  2: { Rapier (#366) 1-1, 5% }
 187 = 1,75,125,10, 364,1,1,5, 366,1,1,5
-
-##  NPC: Shaman (#191)
-191 =
-
-##  NPC: War Bear (#194)
-194 =
-
-##  NPC: Doll (#198)
-198 =
-
-##  NPC: Rock (#201)
-201 =
-
-##  NPC: Earth Rock +1 (#202)
-202 =
-
-##  NPC: Earth Rock +60 (#203)
-203 =
-
-##  NPC: Shark (#204)
-204 =
-
-##  NPC: Baby Turtle (#205)
-205 =
 
 ##  NPC: Christmas Doll (#206)
 ##  0: { Gold (#1) 100-200, 10% }
@@ -632,15 +608,6 @@
 ##  2: { Bazar Staff (#455) 1-1, 5% }
 218 = 1,50,100,10, 468,1,1,5, 455,1,1,5
 
-##  NPC: Ludwig (#219)
-219 =
-
-##  NPC: Rotveig (#220)
-220 =
-
-##  NPC: Cacadem (#222)
-222 =
-
 ##  NPC: Flowy (#223)
 ##  0: { Flowies (#480) 1-1, 10% }
 ##  1: { Gold (#1) 45-60, 5% }
@@ -690,19 +657,10 @@
 ##  0: { Borg Metal (#482) 1-1, 5% }
 233 = 482,1,1,5
 
-##  NPC: Mini Army (#238)
-238 =
-
 ##  NPC: Artist (#239)
 ##  0: { Pencil (#481) 1-1, 10% }
 ##  1: { Scroll Of Art (#367) 1-1, 10% }
 239 = 481,1,1,10, 367,1,1,10
-
-##  NPC: Hamster (#240)
-240 =
-
-##  NPC: Mole (#241)
-241 =
 
 ##  NPC: Fish (#242)
 ##  0: { Fish (#475) 1-1, 5% }
@@ -726,8 +684,8 @@
 
 ##  NPC: Teawcusar (#246)
 ##  0: { Gold (#1) 90-190, 10% }
-##  1: { Taewcus Tentacle (#355) 1-1, 5% }
-246 = 1,90,190,10, 355,1,1,5
+##  1: { Taewcus Tentacle (#355) 1-1, 10% }
+246 = 1,90,190,10, 355,1,1,10
 
 ##  NPC: Tarentuda (#248)
 248 =
@@ -742,7 +700,7 @@
 255 = 2,600,700,10, 457,1,1,5
 
 ##  NPC: Apozen's Taraduda (#256)
-## 	0: { Gold (#1) x10-200, 1% }
+## 	0: { Gold (#1) 10-200, 1% }
 256 = 1,10,200,1
 
 ##  NPC: Apozen Overlord (#257)
@@ -751,17 +709,10 @@
 ##  2: { Devil Costume (#200) 1-1, 5% }
 257 = 1,3000,5000,10, 199,1,1,5, 200,1,1,5
 
-##  NPC: Baby Turtle (#287)
-287 =
-
-##  NPC: Castle Hedgehog (#288)
-288 =
-
-## 	NPC: Elite Dragon (#351)
-## 	0: { Dragon Skull (#609) x1, 1% }
-## 	1: { Gold (#1) x200-1000, 50% }
-## 	2: { Dragon Eye (#600) x1, 3% }
-## 	3: { Dragon Wing (#470) x1, 3% }
-## 	4: { Dragon Claw (#469) x1, 3% }
-351 = 609,1,1,1, 1,200,1000,50, 600,1,1,3, 470,1,1,3, 469,1,1,3
-
+##  NPC: Elite Dragon (#351)
+##  0: { Dragon Skull (#523) 1-1, 1% }
+##  1: { Gold (#1) 200-1000, 50% }
+##  2: { Dragon Eye (#472) 1-1, 3% }
+##  3: { Dragon Wing (#470) 1-1, 3% }
+##  4: { Dragon Claw (#469) 1-1, 3% }
+351 = 523,1,1,1, 1,200,1000,50, 472,1,1,3, 470,1,1,3, 469,1,1,3
