--- a/data/formulas.ini
+++ b/data/formulas.ini
@@ -68,3 +68,9 @@ class.4.damage = 0
 class.4.accuracy = 0
 class.4.evade = 0
 class.4.defence = 0
+
+# Admin
+class.5.damage = cha / 0.1
+class.5.accuracy = cha / 0.1
+class.5.evade = cha / 0.1
+class.5.defence = cha / 0.1
