--- a/data/drops.ini
+++ b/data/drops.ini
@@ -84,13 +84,15 @@
 ##  NPC: Barbarian (#11)
 ##  0: { Barbarian Ear (#263) 1-1, 10% }
 ##  1: { Scroll Of Beach (#62) 1-1, 5% }
-##  2: { Scroll Of Ancient (#64) 1-1, 5% }
-##  3: { Scroll Of Recall (#65) 1-1, 5% }
-##  4: { Scroll Of Centaur (#66) 1-1, 5% }
-##  5: { Scroll Of Stronghold (#67) 1-1, 5% }
-##  6: { Scroll Of Castle (#68) 1-1, 5% }
-##  7: { Scroll Of Void (#69) 1-1, 5% }
-11 = 263,1,1,10, 62,1,1,5, 64,1,1,5, 65,1,1,5, 66,1,1,5, 67,1,1,5, 68,1,1,5, 69,1,1,5
+##  2: { Scroll Of Event (#63) 1-1, 5% }
+##  3: { Scroll Of Ancient (#64) 1-1, 5% }
+##  4: { Scroll Of Recall (#65) 1-1, 5% }
+##  5: { Scroll Of Centaur (#66) 1-1, 5% }
+##  6: { Scroll Of Stronghold (#67) 1-1, 5% }
+##  7: { Scroll Of Castle (#68) 1-1, 5% }
+##  8: { Scroll Of Void (#69) 1-1, 5% }
+##  9: { Scroll Of Aeven (#70) 1-1, 5% }
+11 = 263,1,1,10, 62,1,1,5, 63,1,1,5, 64,1,1,5, 65,1,1,5, 66,1,1,5, 67,1,1,5, 68,1,1,5, 69,1,1,5, 70,1,1,5
 
 ##  NPC: Cactusaur (#12)
 ##  0: { Dragon Mask (#197) 1-1, 5% }
@@ -352,7 +354,8 @@
 ##  0: { Gold (#1) 1900-2900, 10% }
 ##  1: { Sai (#26) 1-1, 10% }
 ##  2: { Last Samurai (#372) 1-1, 5% }
-120 = 1,1900,2900,10, 26,1,1,10, 372,1,1,5
+##  3: { Scroll Of Anundo (#511) 1-1, 5% }
+120 = 1,1900,2900,10, 26,1,1,10, 372,1,1,5, 511,1,1,5
 
 ##  NPC: Carnivo (#121)
 ##  0: { Leaves (#395) 1-1, 10% }
