--- a/config/sln.ini
+++ b/config/sln.ini
@@ -17,16 +17,16 @@ SLNURL = http://www.apollo-games.com/SLN/sln.php/
 ## SLNHost (string)
 # Hostname that resolves to your server
 # Leave it blank to use your IP address
-SLNHost = test.pi-eo.com
+SLNHost = 
 
 ## SLNSite (string)
 # Website for your server
 # Leave it blank if you don't have one
-SLNSite = http://test.pi-eo.com
+SLNSite = 
 
 ## ServerName (string)
 # Common name of your server
-ServerName = Pi EO Test
+ServerName = Untitled Server
 
 ## SLNPeriod (number)
 # How often your server checks in with the SLN server
@@ -53,20 +53,20 @@ BotCharacters =
 
 ## Client (string)
 # URL of Client (SLN)
-SLNClient = http://test.pi-eo.com
+SLNClient = 
 
 ## YouTube (string)
 # URL of Youtube Video
-YouTube = http://test.pi-eo.com
+YouTube = 
 
 ## FaceBook (string)
 # URL of Facebook Page
-FaceBook = http://test.pi-eo.com
+FaceBook = 
 
 ## Twitter (string)
 # Url of Twitter Page
-Twitter = http://test.pi-eo.com
+Twitter = 
 
 ## Discord (string)
 # Url of Discord
-Discord = http://test.pi-eo.com
+Discord = 
