--- a/config/sln.ini
+++ b/config/sln.ini
@@ -8,7 +8,7 @@
 # Enable or disable SLN
 # NOTE: This will put your webserver on a publicly viewable list of servers
 # This service has been discontinued. Please leave this option disabled.
-SLN = yes
+SLN = no
 
 ## SLNURL (string)
 # URL of SLN server 
