--- a/config/rates.ini
+++ b/config/rates.ini
@@ -100,3 +100,34 @@ Quake4 = 1,4,6,8
 
 ## Account creation timer
 AccountCreationTimer = 30s
+
+## WEAPON AREA OF EFFECTS ##
+
+# Enable AoE attacks (yes/no)
+EnableAoE = yes
+
+# Enable weapon effects for specific weapons
+
+# Polearm
+245.WepEffEnable = yes
+
+# Lotus Sword
+284.WepEffEnable = yes
+
+# Twin Blades
+327.WepEffEnable = yes
+
+# Effect ID for each weapon
+245.WepEff = 10
+284.WepEff = 12
+327.WepEff = 14
+
+# Effect range (in tiles)
+245.WepEffDist = 1
+284.WepEffDist = 2
+327.WepEffDist = 3
+
+# TP cost for using the effect
+245.TP = 1
+284.TP = 2
+327.TP = 3
