Passive Pet System

--- a/config/extra.ini
+++ b/config/extra.ini
@@ -164,6 +164,12 @@ EmailMaxLength = 64
 # Maximum length of computer name
 ComputerNameLength = 64
 
+## AccountDelayTime (number)
+# Account creation delay time in seconds (10-600 seconds)
+# Controls how fast account creation happens (lower = faster)
+# Default is 10 for fast account creation
+AccountDelayTime = 10
+
 ## LimitAttack (number)
 # Maximum number of attacks that can be executed without moving
 # 0 to disable
