--- a/config/files.ini
+++ b/config/files.ini
@@ -12,11 +12,6 @@ ENF = ./data/pub/dtn001.enf
 ESF = ./data/pub/dsl001.esf
 ECF = ./data/pub/dat001.ecf
 
-## AutoSplitPubFiles (bool)
-# Automatically split large pub files in to multiple smaller files
-# This is required to have more than 900 items when using older editors
-AutoSplitPubFiles = no
-
 ## NewsFile (string)
 # File containing the MotD and news
 NewsFile = ./data/news.txt
@@ -52,7 +47,7 @@ MapDir = ./data/maps/
 ## Maps (number)
 # Number of maps to attempt to load
 # Should be less than 64000
-Maps = 500
+Maps = 278
 
 ## QuestDir (string)
 # Directory quests are contained
@@ -63,3 +58,8 @@ QuestDir = ./data/quests/
 # ID referenced by an NPC.
 # Should be less than 64000
 Quests = 0
+
+## PetsFile (string)
+# Pets configuration data
+PetsFile = ./data/pets.ini
+
